[package]
name = "blazzy"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "synchapi", "winbase", "winnt", "handleapi", "minwinbase"] }
clap = {version = "4.5.8", features = ["derive"]}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
actix-web = {version = "4.8.0"}
lru = "0.12.3"
atomic_refcell = "0.1.13"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4"
ctrlc = { version = "3.4.4", features = ["termination"] }
serde_json = "1.0.120"
